--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
+
 # See http://help.github.com/ignore-files/ for more about ignoring files.
+
+#environments
+/src/environments
+
 
 # Compiled output
 /dist
